--- a/templates/delete-category.html
+++ b/templates/delete-category.html
@@ -5,6 +5,7 @@
 
 <form action='{{ url_for('deleteCategory', category_id=category.id) }}' method = 'post'>
 <input type='submit', value = 'Delete'>
+<input name=_csrf_token type=hidden value="{{ csrf_token }}">
 </form>
 
 <a href = '{{ url_for('showCatagories') }}'>Cancel</a>
