--- a/templates/delete-item.html
+++ b/templates/delete-item.html
@@ -4,6 +4,7 @@
 <h1>Are you sure you wish to delete {{ item.name }}?</h1>
 
 <form action='{{ url_for('deleteItem', category_id=item.category_id, item_id=item.id) }}' method = 'post'>
+<input name=_csrf_token type=hidden value="{{ csrf_token }}">
 <input type='submit', value = 'Delete'>
 </form>
 
