--- a/templates/edit-category.html
+++ b/templates/edit-category.html
@@ -7,6 +7,7 @@
     <p>Name:</p>
     <input type = 'text' size='30' name='name' placeholder='{{ category.name}}'>
     <input type = 'submit' value='Edit'>
+    <input name=_csrf_token type=hidden value="{{ csrf_token }}">
     <a href = '{{ url_for('showCatagories') }}'>Cancel</a>
 </form>
 
