--- a/templates/edit-item.html
+++ b/templates/edit-item.html
@@ -10,6 +10,7 @@
     <input type = 'text' size='30' name='description' placeholder='{{ item.description}}'>
     <p>Picture:</p>
     <input type='file' name='picture' accept='image/*'>
+    <input name=_csrf_token type=hidden value="{{ csrf_token }}">
     <input type = 'submit' value='Edit'>
     <a href = '{{ url_for('showItems', category_id=item.category_id) }}'>Cancel</a>
 </form>
