--- a/templates/new-item.html
+++ b/templates/new-item.html
@@ -10,6 +10,7 @@
     <input type = 'text' size='30' name='description'>
     <p>Picture:</p>
     <input type='file' name='picture' accept='image/*'>
+    <input name=_csrf_token type=hidden value="{{ csrf_token }}">
     <input type = 'submit' value='Create'>
     <a href = '{{ url_for('showItems', category_id=category.id) }}'>Cancel</a>
 </form>
